--- a/source/package/plugins/plg_irmcustomerwidgets_corewidget/language/en-GB/en-GB.plg_irmmasterdatawidgets_corewidget.ini
+++ b/source/package/plugins/plg_irmcustomerwidgets_corewidget/language/en-GB/en-GB.plg_irmmasterdatawidgets_corewidget.ini
@@ -4,7 +4,7 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-PLG_IRMMASTERDATAWIDGETS_COREWIDGET = "IRMMasterDataWidget - Core widget"
-PLG_IRMMASTERDATAWIDGETS_COREWIDGET_XML_DESCRIPTION = "Widget Plugin for the IRM Masterdata App which extends the base data view on the right with small helpers and/or statistics and other informations"
+PLG_IRMCUSTOMERWIDGETS_COREWIDGET = "IRMCustomerWidget - Core widget"
+PLG_IRMCUSTOMERWIDGETS_COREWIDGET_XML_DESCRIPTION = "Widget Plugin for the IRM Customer App which extends the base data view on the right with small helpers and/or statistics and other informations"
 
-PLG_IRMMASTERDATAWIDGETS_COREWIDGET_CONTAINERNAME = "Core Widget"
+PLG_IRMCUSTOMERWIDGETS_COREWIDGET_CONTAINERNAME = "Core Widget"
