--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -60,7 +60,7 @@ COM_XIVEIRM_IRMCUSTOMERS_EMAIL="0"
 COM_XIVEIRM_IRMCUSTOMERS_WEB="0"
 COM_XIVEIRM_IRMCUSTOMERS_REMARKS="0"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_CUSTOMER_DB_ID="Customer DB-ID"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_CUSTOMER_CID="Customer CID"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_KEY="Tab Key"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_VALUE="Tab Value"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_ORDERING="0"
@@ -140,8 +140,8 @@ COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER="IrmcustomerForm"
 COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER_DESC="Show a form to add or edit a Irmcustomer"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATION="Additional Information"
 COM_XIVEIRM_LEGEND_ADDITIONALINFORMATION="Additional Information"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_CUSTOMER_DB_ID="Customer DB-ID"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_CUSTOMER_DB_ID=""
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_CUSTOMER_CID="Customer CID"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_CUSTOMER_CID=""
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_KEY="Tab Key"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_KEY="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM! For Example: We want to store datas need for invoicing - i.e. an additional invoice address or other invoice related datas. This tab_id is a combination between your plugin idname  (eg: \"invoicevalues\") and the customer db id (This is the id from the #__xiveirm_masterdata table). We identify if only one tab is related to the customer at the same time! The complete string looks like \"invoicevalues.4234142\""
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_VALUE="Tab Value"
