--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -9,9 +9,16 @@ COM_XIVEIRM_ITEM_SAVED_SUCCESSFULLY = "Item saved successfully"
 COM_XIVEIRM_ITEM_DELETED_SUCCESSFULLY = "Item deleted successfully"
 COM_XIVEIRM_ITEM_NOT_LOADED = "Could not load the item"
 COM_XIVEIRM_VIEW_FILE = "[View File]"
+COM_XIVEIRM_SAVE_ITEM = "Save"
+COM_XIVEIRM_API_SAVED_BUTTON = "Saved"
+COM_XIVEIRM_API_ERROR_BUTTON = "Error!"
+COM_XIVEIRM_API_ERROR_TRY_AGAIN_BUTTON = "Error! Try Again"
+COM_XIVEIRM_UPDATE_ITEM = "Update"
 COM_XIVEIRM_ADD_ITEM = "Add new"
 COM_XIVEIRM_EDIT_ITEM = "Edit"
 COM_XIVEIRM_DELETE_ITEM = "Delete"
+COM_XIVEIRM_CANCEL_ITEM = "Cancel"
+COM_XIVEIRM_API_PLEASE_WAIT_BUTTON = "Please wait..."
 COM_XIVEIRM_PUBLISH_ITEM = "Publish"
 COM_XIVEIRM_UNPUBLISH_ITEM = "Unpublish"
 COM_XIVEIRM_NO_ITEMS = "There are no items in the list"
@@ -38,16 +45,14 @@ COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
 COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
 COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
 COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
-COM_XIVEIRM_IRMCUSTOMER_FORM_SUBMIT_CHECKIN = "Submit"
-COM_XIVEIRM_IRMCUSTOMER_FORM_SUBMIT_CHECKIN_TIP = "Submit & Check-In"
-COM_XIVEIRM_IRMCUSTOMER_FORM_CANCEL_CHECKIN = "Cancel"
-COM_XIVEIRM_IRMCUSTOMER_FORM_CANCEL_CHECKIN_TIP = "Cancel & Check-In (if no other user has opened)"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CANCEL = "Cancel"
 COM_XIVEIRM_IRMCUSTOMER_FORM_RESET = "Reset"
 COM_XIVEIRM_IRMCUSTOMER_FORM_RESET_TIP = "Reset form to the default values"
 
 ; baseForm ----------------------------------------
 COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_MODIFIED = "Last modified on:"
-COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_INFO = "<h1><i class=\"icon-signout\"></i> Sie haben diesen Kontakt ausgecheckt!</h1><p>Andere Benutzer sehen, dass Sie diesen Kontakt gerade bearbeiten und erhalten einen entsprechenden Hinweis.</p><p>Bitte beachten Sie auch die folgenden Hinweise:</p><ul><li>Das \"CICA-System\" <i>(Check-In, Check-Out)</i> weist Sie auf eine laufende bearbeitung hin.</li><li>Eine gleichzeitige Bearbeitung ist m&ouml;glich, kann jedoch zu inkonsistenten Datens&auml;tzen f&uuml;hren</li><li>Verlassen Sie diese Kontakt bitte \"IMMER\" &uuml;ber die entsprechenden Schaltfl&auml;chen! (Speichern, Abbrechen, etc...)</li><li>Eine automatische Freigabe des Datensatzes erfolgt automatisch, wenn innerhalb von 10 Minuten keine Eingabe erfolgt!</li></ul>"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_TITLE = "Check-out: Successfully"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_BODY = "Other user see can now see that you are currently editing %s. Don't forget to click _QQ_SAVE_QQ_ or _QQ_CANCEL_QQ_ to check in again - editing would otherwise not be possible by other users!"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"icon-signout\"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"icon-lock red\"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="%s">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
 COM_XIVEIRM_IRMCUSTOMER_FORM_ACCESS_ID = "Access ID"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID_LABEL = "Customer ID"
