--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -26,13 +26,14 @@ COM_XIVEIRM_TITLE_FORM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show a form to a
 COM_XIVEIRM_TITLE_ITEM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show an item"
 COM_XIVEIRM_TITLE_LIST_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "List all the items"
 COM_XIVEIRM_SELECT = "- Please Select -"
-
+COM_XIVEIRM_PREVENT_LEAVE_SITE = "Note: All your changes will be lost to this customer. Are you sure you want to leave this page?"
+COM_XIVEIRM_PREVENT_FORM_SUBMISSION = "Another form on this page has been changed. Are you sure you want to continue with this form submission?"
 
 ; IRMMasterdataGlobalForm ----------------------------------------
 COM_XIVEIRM_IRMCUSTOMER_FORM_ADD_NEW_CONTACT = "Add a new contact"
 COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
 COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
-COM_XIVEIRM_IRMCUSTOMER_FORM_TAB_BASICDATA = "Stammdaten"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TAB_BASICDATA = "Master data"
 COM_XIVEIRM_IRMCUSTOMER_FORM_TAB_MORE = "More"
 COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
 COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
@@ -52,8 +53,9 @@ COM_XIVEIRM_IRMCUSTOMER_FORM_RESET_TIP = "Reset form to the default values"
 ; baseForm ----------------------------------------
 COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_MODIFIED = "Last modified on:"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_TITLE = "Check-out: Successfully"
-COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_BODY = "Other user see can now see that you are currently editing %s. Don't forget to click \"SAVE\" or \"CANCEL\" to check in again - editing would otherwise not be possible by other users!"
-COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"icon-signout\"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"icon-lock red\"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="%s">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_BODY = "Other user see can now see that you are currently editing %s. Don\'t forget to click \"SAVE\" or \"CANCEL\" to check in again - editing would otherwise not be possible by other users!"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR_TITLE = "Please note, this customer has been checked out by another user!"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR_BODY = "What happened?<ul><li>Another user has already startet to work on this customer.</li></ul></p><p>What can i do?<ul><li>You can work as usual with this customer, but you can currently not change the master data!</li><li>Contact the corresponding user to get more information about the processing (see below) or try again later.</li></ul>TIP: If a contact is checked out, you'll see a red lock icon <i class=\"icon-lock red\"></i> in the list of customers!</p><p>SYSLOG: The user <a href="%s">%s</a> has checked out this contact on %s. An expected processing is possible in about ~%s minutes."
 COM_XIVEIRM_IRMCUSTOMER_FORM_ACCESS_ID = "Access ID"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID_LABEL = "Customer ID"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID = "Enter the Customer ID"
