--- a/source/package/components/com_xiveirm/staging/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/package/components/com_xiveirm/staging/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -4,21 +4,23 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-COM_XIVEIRM="XiveIRM"
-COM_XIVEIRM_XML_DESCRIPTION="Interoperable Relationship Management - the next Generation of CRM"
-COM_XIVEIRM_TEST_LABEL="Test label"
-COM_XIVEIRM_TITLE_IRMCUSTOMERS="IRM Customers"
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS="IRM Customers"
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS_DESC="Show a list of IRM Customers"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER="Single Irmcustomer"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER_DESC="Show a specific Irmcustomer"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER="IrmcustomerForm"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER_DESC="Show a form to add or edit a Irmcustomer"
-COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
-COM_XIVEIRM_TITLE_SELECTLISTS="Select lists"
-COM_XIVEIRM_TITLE_LIST_VIEW_APIS="Apis"
-COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC="Show a list of Apis"
-COM_XIVEIRM_TITLE_ITEM_VIEW_API="Single Api"
-COM_XIVEIRM_TITLE_ITEM_VIEW_API_DESC="Show a specific Api"
-COM_XIVEIRM_TITLE_FORM_VIEW_API="ApiForm"
-COM_XIVEIRM_TITLE_FORM_VIEW_API_DESC="Show a form to add or edit a Api"
+COM_XIVEIRM = "XiveIRM"
+COM_XIVEIRM_XML_DESCRIPTION = "Interoperable Relationship Management - the next Generation of CRM"
+COM_XIVEIRM_TEST_LABEL = "Test label"
+COM_XIVEIRM_TITLE_CONTACTS = "Contacts"
+COM_XIVEIRM_CONTACTS_CATID = "Contacts - Category"
+COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS = "Contacts"
+COM_XIVEIRM_TITLE_LIST_VIEW_CONTACTS_DESC = "Show a list of Contacts"
+COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT = "Single Contact"
+COM_XIVEIRM_TITLE_ITEM_VIEW_CONTACT_DESC = "Show a specific Contact"
+COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT = "ContactForm"
+COM_XIVEIRM_TITLE_FORM_VIEW_CONTACT_DESC = "Show a form to add or edit a Contact"
+COM_XIVEIRM_TITLE_OPTIONS = "Options"
+COM_XIVEIRM_TITLE_OPTIONCATEGORIES = "Option Categories"
+COM_XIVEIRM_TITLE_TABAPPS = "TabApps"
+COM_XIVEIRM_TITLE_LIST_VIEW_APIS = "Apis"
+COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC = "Show a list of Apis"
+COM_XIVEIRM_TITLE_ITEM_VIEW_API = "Single Api"
+COM_XIVEIRM_TITLE_ITEM_VIEW_API_DESC = "Show a specific Api"
+COM_XIVEIRM_TITLE_FORM_VIEW_API = "ApiForm"
+COM_XIVEIRM_TITLE_FORM_VIEW_API_DESC = "Show a form to add or edit a Api"
